--- a/PFfront/src/app/components/login/login.component.html
+++ b/PFfront/src/app/components/login/login.component.html
@@ -1,4 +1,14 @@
-<div class="login">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  
+
+
+<div class="login" style="float: left;" >
     <form class="custom-form" method="post">
       <h1>Login</h1>
       <input
@@ -18,3 +28,8 @@
       <button type="submit" (click)="login()">Log in</button>
     </form>
   </div>
+  <div style="float: right"ngClass="">
+    <app-register></app-register>
+  </div>
+</body>
+</html>
