--- a/PFfront/src/app/app.component.html
+++ b/PFfront/src/app/app.component.html
@@ -1,9 +1,10 @@
 <header>
   <app-nav></app-nav>
 </header>
-<body>
-  <app-home></app-home>
-</body>
+
 <main>
   <router-outlet></router-outlet>
 </main>
+<footer>
+<app-footer></app-footer>
+</footer>
