--- a/PFfront/src/app/components/login/login.component.html
+++ b/PFfront/src/app/components/login/login.component.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  
 
 
-<div class="login" style="float: left;" >
+<div class="login"  >
     <form class="custom-form" method="post">
       <h1>Login</h1>
       <input
@@ -28,8 +20,6 @@
       <button type="submit" (click)="login()">Log in</button>
     </form>
   </div>
-  <div style="float: right"ngClass="">
-    <app-register></app-register>
-  </div>
-</body>
-</html>
+<div style="display: flex; justify-content: center; align-items: center;">
+  <h3>si no tiene cuenta <a routerLink="register">Registrese</a></h3>
+</div>
