--- a/PFfront/src/app/components/login/login.component.css
+++ b/PFfront/src/app/components/login/login.component.css
@@ -15,7 +15,7 @@ h1 {
 .custom-form {
   min-width: 300px;
   max-width: 60%;
-  margin: 0px auto;
+  margin: 0px ;
   background: rgba(255, 255, 255, 0.15);
   padding: 2rem 3rem;
   margin: auto;
