--- a/PFfront/src/app/components/nav/nav.component.css
+++ b/PFfront/src/app/components/nav/nav.component.css
@@ -31,8 +31,8 @@
   
   ul {
       list-style-type: none;
-      margin: 0;
-      padding: 0;
+      margin: auto;
+      padding: auto;
       overflow: hidden;
       background-color: #333;
     }
