--- a/PFfront/src/app/footer/footer.component.css
+++ b/PFfront/src/app/footer/footer.component.css
@@ -1,7 +1,19 @@
 .media{
-    float: right;
+    
+    background: color #252525;
+    padding: auto;
+    display: inline;
+
 }
 .footer{
-    margin: 30px;
+    position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+  font-size: 14px;
+  color: #666;
 
 }
