--- a/PFfront/src/app/components/login/login.component.html
+++ b/PFfront/src/app/components/login/login.component.html
@@ -21,5 +21,5 @@
     </form>
   </div>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <h3>si no tiene cuenta <a routerLink="register">Registrese</a></h3>
+  <h3>Si no tiene cuenta <a routerLink="register">Registrese</a></h3>
 </div>
