--- a/PFfront/src/app/footer/footer.component.css
+++ b/PFfront/src/app/footer/footer.component.css
@@ -1,19 +1,18 @@
 .media{
-    
+    float: right;
     background: color #252525;
     padding: auto;
-    display: inline;
+    display: flow-root;
 
 }
 .footer{
-    position: relative;
-  left: 0;
+  background-color: #252525;
+  color: #fff;
+  font-size: 12px;
+  position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: #f2f2f2;
-  padding: 20px;
-  text-align: center;
-  font-size: 14px;
-  color: #666;
+  z-index: 10;
+
 
 }
