--- a/PFfront/src/app/components/home/home.component.html
+++ b/PFfront/src/app/components/home/home.component.html
@@ -2,7 +2,13 @@
 <head>
     <app-nav></app-nav>
 </head>
-<body>
-    <H1>home</H1>
+<body class="cuerpo">
+    <!--Este div va  a ser el contenedor de el carruzel automatico  -->
+    <div id="carrusel-contenido">
+        <div id="carrusel-caja">
+            <div class="carrusel-elemento">
+                <img class="imagen"  src="" >
+            </div>
+        </div>
+    </div>
 </body>
-
