--- a/PFfront/src/app/components/market/market.component.css
+++ b/PFfront/src/app/components/market/market.component.css
@@ -1,4 +1,19 @@
 .card{
-margin: 10px;
+    margin: 10px;
     border: 5px solid #252525;
+    flex: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.card.content{
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+.card .footer{
+    background-color:gray ;
+    padding: 10px;
+}
+.shop{
+    display: flex;
+
 }
