--- a/PFfront/src/app/components/nav/nav.component.html
+++ b/PFfront/src/app/components/nav/nav.component.html
@@ -19,12 +19,22 @@
                   </svg>
                 </a>
             </li>
+            
             <li style="float: right">
                 <a routerLink="login"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
                   </svg>
 
                 </a>
+            </li>
+
+            <li style="float: right;">
+                <a routerLink="cart">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16">
+                        <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"/>
+                      </svg>
+                </a>
+            
             </li>
              
         </ul>
