--- a/PFfront/src/app/components/login/login.component.html
+++ b/PFfront/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
       />
       <button type="submit" (click)="login()">Log in</button>
     </form>
+    <div style="display: flex; justify-content: center; align-items: center;">
+      <h3>If you don't have an account,  <a routerLink="register">Register</a></h3>
+    </div>
   </div>
-<div style="display: flex; justify-content: center; align-items: center;">
-  <h3>Si no tiene cuenta <a routerLink="register">Registrese</a></h3>
-</div>
