--- a/PFfront/src/app/components/market/market.component.html
+++ b/PFfront/src/app/components/market/market.component.html
@@ -3,34 +3,14 @@
 
 <div class="card">
 
-    <div class="content">
-        <h1>HOLA</h1>
-    </div>
-    <div class="footer">
-        <button class="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z"/>
-          </svg>
-        </button>
-        <div class="content">
-            <h1>HOLA</h1>
+    <div class="card" style="width: 18rem;">
+        <img src="/src/assets/imagen/food/cat/comidag1.webp" class="card-img-top" >
+        <div class="card-body">
+          <h5 class="card-title">Royal Canin</h5>
+          <p class="card-text">Regular fit 5kg.</p>
+          <a href="" class="btn btn-primary">Add cart</a>
         </div>
-        <div class="footer">
-            <button class="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z"/>
-              </svg>
-            </button>
-            <div class="content">
-                <h1>HOLA</h1>
-            </div>
-            <div class="footer">
-                <button class="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z"/>
-                  </svg>
-                </button>
+      </div>
     </div>
 </div>
-
-</div>
+    
