--- a/PFfront/src/app/components/register/register.component.html
+++ b/PFfront/src/app/components/register/register.component.html
@@ -1,7 +1,31 @@
-<div class="register">
-    <form class="custom-form" method="post">
-      <h1>Register</h1>
-      
+
+<div class="login" >
+  <form class="custom-form" method="post">
+    <div class="card-header">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Log in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link activate" routerLink="/register">New Account</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <select class="form-select form-select-lg mb-3" aria-label="Large select example" [(ngModel)]="rol" name="mySelect">
+        <option selected>Log in AS</option>
+        <option value="admin">Admin</option>
+        <option value="Customer">Customer</option>
+      </select>
+      <div *ngIf="rol === 'admin'">
+    
+      <input
+        type="username"
+        [(ngModel)]="username"
+        name="username"
+        placeholder="username"
+        required="required"
+      />
       <input
         type="email"
         [(ngModel)]="email"
@@ -32,6 +56,48 @@
         placeholder="Repeat the password"
         required="required"
       />
-      <button type="submit" (click)="register()">Register</button>
-    </form>
-  </div>
+      <button type="submit" (click)="registerAdmin()">Register</button>
+      </div>
+      <div *ngIf="rol === 'Customer'">
+    
+        <input
+          type="username"
+          [(ngModel)]="username"
+          name="username"
+          placeholder="username"
+          required="required"
+        />
+        <input
+          type="email"
+          [(ngModel)]="email"
+          name="email"
+          placeholder="Email"
+          required="required"
+        />
+        <input 
+        type="phone"
+        [(ngModel)]="phone"
+        name="phone"
+        placeholder="Phone"
+        required="true"
+        minlength="10"
+        maxlength="16"
+        />
+        <input
+          type="password"
+          [(ngModel)]="password"
+          name="password"
+          placeholder="Password"
+          required="required"
+        />
+        <input
+          type="password"
+          [(ngModel)]="confirmPassword"
+          name="password"
+          placeholder="Repeat the password"
+          required="required"
+        />
+        <button type="submit" (click)="registerCustomer()">Register</button>
+        </div>
+    
+</div> 
